--- a/resources/codes/1.vtlayer/1.layer-operation/3.load-remote-geo.html
+++ b/resources/codes/1.vtlayer/1.layer-operation/3.load-remote-geo.html
@@ -57,7 +57,7 @@
     };
 
     const geo = new maptalks.GeoJSONVectorTileLayer('geo', {
-      data: '/resources/geojson/area.geojson',
+      data: 'resources/geojson/area.geojson',
       style
     });
 
