--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EMPT1PBFDK"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-EMPT1PBFDK"></script> -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
