--- a/resources/codes/analysis/flood.html
+++ b/resources/codes/analysis/flood.html
@@ -41,22 +41,14 @@
     <div id="map" class="container"></div>
 
     <script>
-      let viewshedAnalysis = null,
-        eyePos,
-        lookPoint,
-        verticalAngle,
-        horizontalAngle;
       const map = new maptalks.Map("map", {
-        center: [91.14478, 29.658272],
+        center: [108.9605239272878, 34.21955775963946],
         zoom: 12,
         pitch: 45,
-        spatialReference: {
-          projection: "EPSG:3857", //for 3857
-        },
         lights: {
           ambient: {
             resource: {
-              url: "./resources/hdr/env.hdr",
+              url: "../resources/hdr/env.hdr",
             },
             color: [1, 1, 1],
             exposure: 1,
@@ -93,45 +85,56 @@
           },
         },
       };
-      const terrainLayer = new maptalks.TerrainLayer("terrain", {
-        maxAvailableZoom: 12,
-        type: "mapbox",
-        accessToken:
-          "pk.eyJ1IjoibWFwYm94LWdsLWpzIiwiYSI6ImNram9ybGI1ajExYjQyeGxlemppb2pwYjIifQ.LGy5UGNIsXUZdYMvfYRiAQ",
-        urlTemplate:
-          "https://server.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
-        terrainUrlTemplate:
-          "https://api.mapbox.com/raster/v1/mapbox.mapbox-terrain-dem-v1/{z}/{x}/{y}",
+
+      const thrDlayer = new maptalks.Geo3DTilesLayer("3d-tiles", {
+        // maxGPUMemory: 128,
+        services: [
+          {
+            url: "http://resource.dvgis.cn/data/3dtiles/dayanta/tileset.json",
+            ambientLight: [1, 1, 1],
+            maximumScreenSpaceError: 1.0,
+            pointOpacity: 0.5,
+            pointSize: 3,
+            heightOffset: -400,
+          },
+        ],
       });
-      const groupLayer = new maptalks.GroupGLLayer("g", [terrainLayer], {
+      thrDlayer.once("loadtileset", (e) => {
+        const extent = thrDlayer.getExtent(e.index);
+        map.fitExtent(extent, 0, { animation: false });
+      });
+      const groupLayer = new maptalks.GroupGLLayer("g", [thrDlayer], {
         sceneConfig,
       }).addTo(map);
+      thrDlayer.once("loadtileset", (e) => {
+        const extent = thrDlayer.getExtent(e.index);
+        map.fitExtent(extent, 0, { animation: false });
+      });
+
       const gui = new dat.GUI({ width: 250 });
       const Config = function () {
         this.waterColor = [0.1 * 255, 0.5 * 255, 0.6 * 255];
-        this.waterHeight = 4000;
+        this.waterHeight = 5;
         this.draw = false;
       };
       const options = new Config();
       const floodAnalysis = new maptalks.FloodAnalysis({
         boundary: [
-          [91.06621721469963, 29.750666501207466],
-          [91.02892475390709, 29.705298214275178],
-          [91.04344250050292, 29.59764099334311],
-          [91.11351421386007, 29.627558843694757],
-          [91.14112402035886, 29.712310012049215],
-          [91.1364614977414, 29.764105762952656],
+          [108.95888623345706, 34.220502132776204],
+          [108.9582019833017, 34.21987192350153],
+          [108.95866479224173, 34.21879554904879],
+          [108.95976365662978, 34.21870809810403],
+          [108.96043811487289, 34.219454268264116],
+          [108.96030941797153, 34.2204038033789]
         ],
-        waterHeight: 4000,
+        waterHeight: 5,
         waterColor: [0.1, 0.5, 0.6],
       });
       floodAnalysis.addTo(groupLayer);
       var vlayer = new maptalks.VectorLayer("vector", {
         enableAltitude: true,
       }).addTo(map);
-      let altitudes = [],
-        coordinates = [];
-      let first = true;
+      let altitudes = [], coordinates = [], first = true;
       var drawTool = new maptalks.DrawTool({
         mode: "LineString",
         symbol: {
@@ -212,7 +215,7 @@
           value[2] / 255,
         ]);
       });
-      const waterHeightController = gui.add(options, "waterHeight", 0, 6000);
+      const waterHeightController = gui.add(options, "waterHeight", 0, 100);
       waterHeightController.onChange(function (value) {
         floodAnalysis.update("waterHeight", value);
       });
