--- a/resources/codes/analysis/viewshed.html
+++ b/resources/codes/analysis/viewshed.html
@@ -53,7 +53,7 @@
         lights: {
           ambient: {
             resource: {
-              url: "./resources/hdr/env.hdr",
+              url: "../resources/hdr/env.hdr",
             },
             color: [1, 1, 1],
             exposure: 1,
@@ -93,16 +93,8 @@
       const groupLayer = new maptalks.GroupGLLayer("g", [], {
         sceneConfig,
       }).addTo(map);
-      const gui = new dat.GUI({ width: 250 });
-      const Config = function () {
-        this.verticalAngle = 30;
-        this.horizonalAngle = 20;
-        this.eyePos = 50;
-        this.lookPoint = 0;
-      };
-      const options = new Config();
+
       const thrDlayer = new maptalks.Geo3DTilesLayer("3d-tiles", {
-        // maxGPUMemory: 128,
         services: [
           {
             url: "http://resource.dvgis.cn/data/3dtiles/dayanta/tileset.json",
@@ -114,14 +106,20 @@
           },
         ],
       }).addTo(groupLayer);
+
       thrDlayer.once("loadtileset", (e) => {
         const extent = thrDlayer.getExtent(e.index);
         map.fitExtent(extent, 0, { animation: false });
         const center = map.getCenter();
+        // 相机位置
         eyePos = [center.x + 0.003, center.y, options.eyePos];
+        // 目标点
         lookPoint = [center.x, center.y, options.lookPoint];
+        // 垂直视角
         verticalAngle = 30;
+        // 水平视角
         horizontalAngle = 20;
+        // 创建可视域分析对象
         viewshedAnalysis = new maptalks.ViewshedAnalysis({
           eyePos,
           lookPoint,
@@ -131,6 +129,15 @@
         viewshedAnalysis.addTo(groupLayer);
       });
 
+      // dat gui的创建代码
+      const gui = new dat.GUI({ width: 250 });
+      const Config = function () {
+        this.verticalAngle = 30;
+        this.horizonalAngle = 20;
+        this.eyePos = 50;
+        this.lookPoint = 0;
+      };
+      const options = new Config();
       const verticalAngleController = gui.add(options, "verticalAngle", 0, 90);
       verticalAngleController.onChange(function (value) {
         viewshedAnalysis.update("verticalAngle", value);
