--- a/resources/codes/gltfLayer/gltfMarker/setAnimationTimeFrame.html
+++ b/resources/codes/gltfLayer/gltfMarker/setAnimationTimeFrame.html
@@ -85,7 +85,7 @@
         lights: {
           ambient: {
             resource: {
-              url: "./resources/hdr/env.hdr",
+              url: "/resources/hdr/env.hdr",
             },
             color: [1, 1, 1],
             exposure: 1,
