--- a/resources/codes/gltfLayer/layer/customShader.html
+++ b/resources/codes/gltfLayer/layer/customShader.html
@@ -43,7 +43,7 @@
         lights: {
           ambient: {
             resource: {
-              url: "./resources/hdr/env.hdr",
+              url: "/resources/hdr/env.hdr",
             },
             color: [1, 1, 1],
             exposure: 1,
