--- a/resources/codes/gltfLayer/layer/identify.html
+++ b/resources/codes/gltfLayer/layer/identify.html
@@ -65,7 +65,7 @@
         lights: {
           ambient: {
             resource: {
-              url: "./resources/hdr/env.hdr",
+              url: "/resources/hdr/env.hdr",
             },
             color: [1, 1, 1],
             exposure: 1,
