--- a/resources/codes/gltfLayer/multiMarker/addItem.html
+++ b/resources/codes/gltfLayer/multiMarker/addItem.html
@@ -68,7 +68,7 @@
         lights: {
           ambient: {
             resource: {
-              url: "./resources/hdr/env.hdr",
+              url: "/resources/hdr/env.hdr",
             },
             color: [1, 1, 1],
             exposure: 1,
